--- a/style.css
+++ b/style.css
@@ -493,21 +493,21 @@ hr {
 }
 
 .background-img2 {
-  background-image: url("https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+  background-image: url("./images/background6.jpg");
   background-size: cover;
   background-position: 50% 50%;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
 }
 
 .background-img3 {
-  background-image: url("./images/background2.jpg");
+  background-image: url("./images/background2.jpeg");
   background-size: cover;
   background-position: 50% 50%;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
 }
 
 .background-img4 {
-  background-image: url("./images/nsbm2.png");
+  background-image: url("./images/nsbm.png");
   background-size: cover;
   background-position: 50% 50%;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
